--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse c-margin-left" id="navbarNavAltMarkup">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mx-auto">
                     <li class="nav-item c-padding-right">
                         <a class="nav-link mt-2" href="index.html">Home</a>
                     </li>
