--- a/index.html
+++ b/index.html
@@ -17,32 +17,39 @@
             <button class="c-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html">Nav Item</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html">Nav Item</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html">Sign in</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html"><span class="custom-nav-text">Join with FB</span></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
+            <div class="collapse navbar-collapse c-margin-left" id="navbarNavAltMarkup">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="page.html">Editing Services</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="post.html">Blog</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="subscribe.html">Subscribe</a>
+                    </li>
+                    <li class="nav-item pr-2">
+                        <a class="nav-link mt-2" href="index.html"><img src="img/twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mt-2" href="index.html"><img src="img/fb.svg" alt="facebook"></a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-12 col-md-3 col-lg-2 c-padding-col-1 mt-3">
+                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-2 c-padding-col-1 mt-3">
                     <img src="img/jo-burnell-home.svg" alt="jo-burnell" class="rounded-circle mb-4">
                     <p>Jo Burnell is a freelance writer, editor, book reviewer and paediatric speech pathologist. <br></p>
                     <a href="#">> Learn more about Jo</a>
@@ -54,76 +61,7 @@
                     </div>
                 </div>
 
-                <!--<div class="col-sm-12 col-lg-2 offset-lg-1 mt-5 pt-5 d-flex">
-<div class="card" style="width: 18rem;">
-<div class="text-sm-1">
-<p>Editing Services</p>
-</div>
-<div class="card-body">
-<img src="img/img-1.png" alt="img-1" class="img-fluid">
-<div class="text-title pb-5 mt-4">
-<p>Jo Burnell Writing and Editing Services</p>
-</div>
-<div class="align-items-end">
-<a href="#">> See all services</a>
-</div>
-
-</div>
-</div>
-</div>
-<div class="col-sm-12 col-lg-2 mt-5 pt-5 d-flex">
-<div class="card" style="width: 18rem;">
-<div class="text-sm-1">
-<p>Editing Services</p>
-</div>
-<div class="card-body">
-<img src="img/img-2.png" alt="img-2" class="img-fluid pb-2 mb-1">
-<div class="text-title pb-5 mt-5">
-<p>Jo Burnell Writing and Editing Services</p>
-</div>
-<div class="align-items-end">
-<a href="#">> See all services</a>
-</div>
-
-</div>
-</div>
-</div>
-<div class="col-sm-12 col-lg-2 mt-5 pt-5 d-flex">
-<div class="card" style="width: 18rem;">
-<div class="text-sm-1">
-<p>Editing Services</p>
-</div>
-<div class="card-body">
-<img src="img/img-3.png" alt="img-3" class="img-fluid mb-3">
-<div class="text-title pb-5 mt-5 pt-4 mb-4">
-<p>Submit your manuscript or contact Jo</p>
-</div>
-<div class="align-items-end">
-<a href="#">> See all services</a>
-</div>
-
-</div>
-</div>
-</div>
-<div class="col-sm-12 col-lg-2 mt-5 pt-5 d-flex">
-<div class="card" style="width: 18rem;">
-<div class="text-sm-1">
-<p>Editing Services</p>
-</div>
-<div class="card-body">
-<img src="img/img-4.png" alt="img-4" class="img-fluid">
-<div class="text-title pb-5 mt-4">
-<p>What is a Structural assessment report?</p>
-</div>
-<div class="align-items-end">
-<a href="#">> See all services</a>
-</div>
-
-</div>
-</div>
-</div>-->
-
-                <div class="col-sm-12 col-lg-2 offset-lg-1 mt-5 pt-5">
+                <div class="col-sm-12 col-md-2 offset-md-1 col-lg-2 offset-lg-1 mt-5 pt-5">
                     <div class="text-sm-1 pb-4">
                         <p>Editing Services</p>
                     </div>
@@ -139,7 +77,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-2 mt-5 pt-5">
+                <div class="col-sm-12 col-md-2 col-lg-2 mt-5 pt-5">
                     <div class="text-sm-1 pb-4">
                         <p>Editing Services</p>
                     </div>
@@ -154,7 +92,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-lg-2 mt-5 pt-5">
+                <div class="col-sm-12 col-md-2 col-lg-2 mt-5 pt-5">
                     <div class="text-sm-1 pb-4">
                         <p>Contact Jo</p>
                     </div>
@@ -170,7 +108,7 @@
                 </div>
 
 
-                <div class="col-sm-12 col-lg-2 mt-5 pt-5">
+                <div class="col-sm-12 col-md-2 col-lg-2 mt-5 pt-5">
                     <div class="text-sm-1 pb-4">
                         <p>Latest Blog post</p>
                     </div>
