--- a/page.html
+++ b/page.html
@@ -17,26 +17,33 @@
             <button class="c-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html">Nav Item</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html">Nav Item</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html">Sign in</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mt-2" href="index.html"><span class="custom-nav-text">Join with FB</span></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
+            <div class="collapse navbar-collapse c-margin-left" id="navbarNavAltMarkup">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="page.html">Editing Services</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="post.html">Blog</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item c-padding-right">
+                        <a class="nav-link mt-2" href="subscribe.html">Subscribe</a>
+                    </li>
+                    <li class="nav-item pr-2">
+                        <a class="nav-link mt-2" href="index.html"><img src="img/twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mt-2" href="index.html"><img src="img/fb.svg" alt="facebook"></a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
