--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,10 @@
                     <li class="nav-item c-padding-right">
                         <a class="nav-link mt-2" href="subscribe.html">Subscribe</a>
                     </li>
-                    <li class="nav-item pr-2">
+                    <li class="nav-item pr-2 c-padding-left">
                         <a class="nav-link mt-2" href="index.html"><img src="img/twitter.svg" alt="twitter"></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item c-padding-left">
                         <a class="nav-link mt-2" href="index.html"><img src="img/fb.svg" alt="facebook"></a>
                     </li>
                 </ul>
